cmake_minimum_required(VERSION 3.19)
project(untitled2)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled2 part_a_test.cpp ExamDetails.cpp ExamDetails.h Character.cpp Character.h Soldier.cpp Soldier.h Medic.cpp Medic.h Game.cpp Game.h Sniper.cpp Sniper.h Exceptions.h Exceptions.cpp Exceptions.h Point.cpp Point.h)