cmake_minimum_required(VERSION 3.19)
project(untitled2)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled2 gameTest.cpp Character.h Character.cpp Soldier.h Soldier.cpp Medic.h Medic.cpp Sniper.cpp Sniper.h Game.cpp Game.h Exceptions.cpp Exceptions.h Point.cpp Point.h Auxiliaries.h Auxiliaries.cpp)